fixes alignments

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -783,44 +783,44 @@ body {
         left: 830px;
       }
       &:nth-of-type(3) {
-        top: 560px;
-        left: 550px;
+        top: 590px;
+        left: 600px;
       }
       &:nth-of-type(4) {
         top: 755px;
-        left: -32px;
+        left: -62px;
       }
       &:nth-of-type(5) {
-        top: 1100px;
-        left: 290px;
+        top: 1130px;
+        left: 260px;
       }
       &:nth-of-type(6) {
         top: 1360px;
         left: 760px;
       }
       &:nth-of-type(7) {
-        top: 1710px;
-        left: 460px;
+        top: 1760px;
+        left: 570px;
       }
       &:nth-of-type(8) {
         top: 2270px;
         left: 770px;
       }
       &:nth-of-type(9) {
-        top: 1720px;
+        top: 1770px;
         left: -50px;
       }
       &:nth-of-type(10) {
-        top: 2450px;
-        left: 400px;
+        top: 2460px;
+        left: 390px;
       }
       &:nth-of-type(11) {
-        top: 2980px;
+        top: 3050px;
         left: 170px;
       }
       &:nth-of-type(12) {
         top: 3217px;
-        left: 680px;
+        left: 710px;
       }
     }
 
